chore(deps) : upgrade to java 21 and upgrade dependencies